80% done with the Destinations card. Managed to fix the issues with flex wrap

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,8 +8,8 @@ $blue-color: #335576;
 $white-color: #ffffff;
 
 //MEDIA QUERIES
-$mobile-max-width: 600px;
-$tablet-min-width: 601px;
+$mobile-max-width: 767px;
+$tablet-min-width: 768px;
 $desktop-min-width: 1025px;
 
 // ----------------------------------//
